crates/nexus/tests/compile_fail/domain_event_on_struct.stderr
error: DomainEvent derive now requires an enum. Wrap event structs in an enum: `enum MyEvent { Created(Created), ... }`
 --> tests/compile_fail/domain_event_on_struct.rs:5:8
  |
5 | struct NotAnEnum {
  |        ^^^^^^^^^
